image name fixing

--- a/LevelEditor.html
+++ b/LevelEditor.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="respo-section-image">
                         <div class="section-photo">
-                            <img src="images/leveleditor/leveleditorimage.png" alt="LevelEditor Screenshot">
+                            <img src="images/leveleditor/leveleditorimage.PNG" alt="LevelEditor Screenshot">
                         </div>
 
                     </div>
