--- a/Pokemon.html
+++ b/Pokemon.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="respo-section-image">
                         <div class="section-photo">
-                            <img src="images/pokemon/pokemonturnbased.png" alt="Slipstream UI Screenshot">
+                            <img src="images/pokemon/pokemonturnbased.PNG" alt="Slipstream UI Screenshot">
                         </div>
 
                     </div>
@@ -121,10 +121,10 @@
 
                     <div class="respo-section2-image pokemon-progression">
                         <div class="section-photo">
-                            <img src="images/pokemon/pokemon1.png" alt="Slipstream UI Screenshot">
+                            <img src="images/pokemon/pokemon1.PNG" alt="Pokemon UI Screenshot">
                         </div>
                         <div class="section-photo">
-                            <img src="images/pokemon/pokemon2.png" alt="Slipstream UI Screenshot">
+                            <img src="images/pokemon/pokemon2.PNG" alt="Pokemon UI Screenshot">
                         </div>
                     </div>
                     <div class="respo-section2-text">
