--- a/Shroombound.html
+++ b/Shroombound.html
@@ -136,7 +136,7 @@
                 <div class="respo-section2">
                     <div class="respo-section2-image">
                         <div class="photo">
-                            <img src="images/shroombound/shroombound-helmetshader.png" alt="Shroombound Screenshot">
+                            <img src="images/shroombound/shroombound-helmetshader.PNG" alt="Shroombound Screenshot">
                         </div>
                     </div>
                     <div class="respo-section-text">
