--- a/hlslshaders.html
+++ b/hlslshaders.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="respo-section-image">
                     <div class="section-photo" style="max-width: 500px;">
-                        <img src="images/shaders/hologram-image.png" alt="Hologram shader Screenshot">
+                        <img src="images/shaders/hologram-image.PNG" alt="Hologram shader Screenshot">
                     </div>
 
                 </div>
@@ -117,7 +117,7 @@
 
                 <div class="respo-section2-image">
                     <div class="section-photo" style="max-width: 700px;">
-                        <img src="images/shaders/waterdrop-image.png" alt="Waterdrop shader Screenshot">
+                        <img src="images/shaders/waterdrop-image.PNG" alt="Waterdrop shader Screenshot">
                     </div>
                 </div>
                 <div class="respo-section2-text">
