--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <a href="">
                                 <figure class="card">
                                     <a href="Pokemon.html">
-                                        <img src="images/pokemon/pokemoncover.png" alt="Pokemon Art Cover">
+                                        <img src="images/pokemon/pokemoncover.PNG" alt="Pokemon Art Cover">
                                         <div class="overlay">
                                             <figcaption>Pokemon C# Console Game<br><figunder>UI Programmer - Gameplay Programmer</figunder></figcaption>
                                         </div>
@@ -205,7 +205,7 @@
 
             <div class="gray">
                 <div class="title">
-                    <h1>Tech Art</h1>
+                    <h1>Technical Art</h1>
 
                     <ul class="gallery">
 
@@ -213,7 +213,7 @@
                             <a href="">
                                 <figure class="card">
                                     <a href="forestShaders.html">
-                                        <img src="images/shaders/forest-cover.png" alt="Pokemon Art Cover">
+                                        <img src="images/shaders/forest-cover.PNG" alt="Shaders Art Cover">
                                         <div class="overlay">
                                             <figcaption>HLSL Unity Forest Scene<br><figunder>Technical Artist - Shader Programmer</figunder></figcaption>
                                         </div>
@@ -226,7 +226,7 @@
                             <a href="">
                                 <figure class="card">
                                     <a href="hlslshaders.html">
-                                        <img src="images/shaders/hlsl-cover.png" alt="Pokemon Art Cover">
+                                        <img src="images/shaders/hlsl-cover.PNG" alt="Shaders Art Cover">
                                         <div class="overlay">
                                             <figcaption>HLSL Shaders<br><figunder>Technical Artist - Shader Programmer</figunder></figcaption>
                                         </div>
