icons in index header, download resume button in index header

--- a/DeckBuilder.html
+++ b/DeckBuilder.html
@@ -52,7 +52,7 @@
                                  I developed a deck-building card game prototype in Unity, focusing on creating engaging card-based 
                                     mechanics and a user-friendly interface. The project involved designing and implementing core
                                     systems such as card management, deck construction, and interactive UI elements. 
-                                    I utilized Unity’s prefab and scripting systems to rapidly prototype features, iterate on gameplay, 
+                                    I utilized Unity's prefab and scripting systems to rapidly prototype features, iterate on gameplay, 
                                     and polish the user experience based on feedback. This project demonstrates my ability to design, 
                                     implement, and refine game systems using C# and Unity, as well as my skills in rapid prototyping
                                     and user-centered design.
@@ -85,7 +85,7 @@
 
                                 <ul>
                                     <li>Designed and implemented the card management system and deck construction</li>
-                                    <li id="link"><a href="#uisystem">Developed interactive UI for deck building and card selection using Unity’s UI tools</a></li>
+                                    <li id="link"><a href="#uisystem">Developed interactive UI for deck building and card selection using Unity's UI tools</a></li>
                                     <li>Integrated visual assets and animations to enhance user experience</li>
                                     <li>Implemented data structures for efficient card and deck handling</li>
                                     <li id="link"><a href="#prototyping">Prototyped and iterated on gameplay mechanics based on playtesting and feedback</a></li>
@@ -105,11 +105,11 @@
                     <div class="respo-section-text">
                         <h1>Interactive UI</h1>
                         <ul>
-                            <li>Utilized Unity’s Canvas system to create a responsive, layered UI for deck building and card selection.</li>
-                            <li>Implemented intuitive drag-and-drop and button controls for adding/removing cards using Unity’s UI components.</li>
+                            <li>Utilized Unity's Canvas system to create a responsive, layered UI for deck building and card selection.</li>
+                            <li>Implemented intuitive drag-and-drop and button controls for adding/removing cards using Unity's UI components.</li>
                             <li>Provided feedback on deck size, stats, and card limits.</li>
                             <li>Used clear icons, tooltips, and section titles to reduce confusion and guide users.</li>
-                            <li>Enabled deck personalization features like renaming and detailed card info popups, all managed through Unity’s UI system.</li>
+                            <li>Enabled deck personalization features like renaming and detailed card info popups, all managed through Unity's UI system.</li>
                         </ul>
                     </div>
                     <div class="respo-section-image">
@@ -155,9 +155,15 @@
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
+                        <span>LinkedIn</span>
                     </a>
                     <a href="https://simonecormier.itch.io/" target="_blank">
                         <i class="fa-brands fa-itch-io"></i>
+                        <span>Itch.io</span>
+                    </a>
+                    <a href="https://github.com/simonebcormier" target="_blank">
+                        <i class="fa-brands fa-square-github"></i>
+                        <span>GitHub</span>
                     </a>
                 </div>
             </div>
@@ -167,3 +173,4 @@
      </body>
 
 </html>
+
