--- a/LevelEditor.html
+++ b/LevelEditor.html
@@ -175,14 +175,7 @@
             <div class="footer-color">
                 <h3>Simone Cormier - Programmer and Designer</h3>
                 <p>simoneblcormier@gmail.com</p>
-                <div class="icons">
-                    <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a href="https://simonecormier.itch.io/" target="_blank">
-                        <i class="fa-brands fa-itch-io"></i>
-                    </a>
-                </div>
+                <div class="icons">                    <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">                        <i class="fa-brands fa-linkedin"></i>                        <span>LinkedIn</span>                    </a>                    <a href="https://simonecormier.itch.io/" target="_blank">                        <i class="fa-brands fa-itch-io"></i>                        <span>Itch.io</span>                    </a>                </div>
             </div>
 
         </section>
@@ -190,3 +183,4 @@
      </body>
 
 </html>
+
