--- a/Shroombound.html
+++ b/Shroombound.html
@@ -75,7 +75,7 @@
 
                                 <ul>
                                     <li><b>Project: </b>VFS Final Project</li>
-                                    <li><b>Role: </b>Technical Artist, UI Programmer</li>
+                                    <li><b>Role: </b>Technical Artist, UI Programmer, Gameplay Programmer</li>
                                     <li><b>Engine: </b>Unreal</li>
                                     <li><b>Programming Languages: </b>C++</li>
 
@@ -349,9 +349,15 @@
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
+                        <span>LinkedIn</span>
                     </a>
                     <a href="https://simonecormier.itch.io/" target="_blank">
                         <i class="fa-brands fa-itch-io"></i>
+                        <span>Itch.io</span>
+                    </a>
+                    <a href="https://github.com/simonebcormier" target="_blank">
+                        <i class="fa-brands fa-square-github"></i>
+                        <span>GitHub</span>
                     </a>
                 </div>
             </div>
@@ -361,3 +367,4 @@
      </body>
 
 </html>
+
