--- a/Zorion.html
+++ b/Zorion.html
@@ -107,7 +107,16 @@
     <p>Simone Cormier - Programmer and Designer</p>
     <div class="icons">
         <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
-            <i class="fa fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <span>LinkedIn</span>
+        </a>
+        <a href="https://simonecormier.itch.io/" target="_blank">
+            <i class="fa-brands fa-itch-io"></i>
+            <span>Itch.io</span>
+        </a>
+        <a href="https://github.com/simonebcormier" target="_blank">
+            <i class="fa-brands fa-square-github"></i>
+            <span>GitHub</span>
         </a>
     </div>
         
@@ -119,6 +128,7 @@
 
     </body>
 </html>
+
 
 
 
