--- a/LUMI.html
+++ b/LUMI.html
@@ -71,7 +71,7 @@
 
                                 <ul>
                                     <li><b>Project: </b>Carleton University Capstone Project</li>
-                                    <li><b>Role: </b>Programmer, Level Designer</li>
+                                    <li><b>Role: </b>UI Programmer, Gameplay Programmer</li>
                                     <li><b>Engine: </b>Unity</li>
                                     <li><b>Programming Languages: </b>C#</li>
 
@@ -300,14 +300,7 @@
             <div class="footer-color">
                 <h3>Simone Cormier - Programmer and Designer</h3>
                 <p>simoneblcormier@gmail.com</p>
-                <div class="icons">
-                    <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a href="https://simonecormier.itch.io/" target="_blank">
-                        <i class="fa-brands fa-itch-io"></i>
-                    </a>
-                </div>
+                <div class="icons">                    <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">                        <i class="fa-brands fa-linkedin"></i>                        <span>LinkedIn</span>                    </a>                    <a href="https://simonecormier.itch.io/" target="_blank">                        <i class="fa-brands fa-itch-io"></i>                        <span>Itch.io</span>                    </a>                </div>
             </div>
 
         </section>
@@ -315,3 +308,4 @@
      </body>
 
 </html>
+
