--- a/Slipstream.html
+++ b/Slipstream.html
@@ -74,7 +74,7 @@
 
                                 <ul>
                                     <li><b>Project: </b>VFS Team Project</li>
-                                    <li><b>Role: </b>Programmer</li>
+                                    <li><b>Role: </b>Technical Artist, UI Programmer, Gameplay Programmer</li>
                                     <li><b>Engine: </b>Unity</li>
                                     <li><b>Programming Languages: </b>C#</li>
 
@@ -277,9 +277,15 @@
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
+                        <span>LinkedIn</span>
                     </a>
                     <a href="https://simonecormier.itch.io/" target="_blank">
                         <i class="fa-brands fa-itch-io"></i>
+                        <span>Itch.io</span>
+                    </a>
+                    <a href="https://github.com/simonebcormier" target="_blank">
+                        <i class="fa-brands fa-square-github"></i>
+                        <span>GitHub</span>
                     </a>
                 </div>
             </div>
@@ -289,3 +295,4 @@
      </body>
 
 </html>
+
