--- a/SpaceShooter.html
+++ b/SpaceShooter.html
@@ -154,9 +154,15 @@
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
+                        <span>LinkedIn</span>
                     </a>
                     <a href="https://simonecormier.itch.io/" target="_blank">
                         <i class="fa-brands fa-itch-io"></i>
+                        <span>Itch.io</span>
+                    </a>
+                    <a href="https://github.com/simonebcormier" target="_blank">
+                        <i class="fa-brands fa-square-github"></i>
+                        <span>GitHub</span>
                     </a>
                 </div>
             </div>
@@ -166,3 +172,4 @@
      </body>
 
 </html>
+
