--- a/about.html
+++ b/about.html
@@ -77,9 +77,15 @@
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
+                        <span>LinkedIn</span>
                     </a>
                     <a href="https://simonecormier.itch.io/" target="_blank">
                         <i class="fa-brands fa-itch-io"></i>
+                        <span>Itch.io</span>
+                    </a>
+                    <a href="https://github.com/simonebcormier" target="_blank">
+                        <i class="fa-brands fa-square-github"></i>
+                        <span>GitHub</span>
                     </a>
                 </div>
             </div>
@@ -87,6 +93,7 @@
         </section>
     </body>
 </html>
+
 
 
 
