resume section added in header

--- a/EngineX.html
+++ b/EngineX.html
@@ -30,6 +30,7 @@
                     <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html"> PORTFOLIO</a></li>
+                        <li><a href="resume.html"> RESUME</a></li>
                         <li><a href="about.html"> ABOUT ME</a></li>
                         <li><a href="contact.html"> CONTACT</a></li>
                     </ul>
