--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
                     <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html"> PORTFOLIO</a></li>
+                        <li><a href="resume.html"> RESUME</a></li>
                         <li><a href="about.html"> ABOUT ME</a></li>
                         <li><a href="contact.html"> CONTACT</a></li>
                     </ul>
@@ -52,10 +53,13 @@
                             <div class="about-text">
                                 <h3 style="font-size: 30px;">Hi, I'm Simone Cormier!</h3>
                                 <p>
-                                    I'm currently a student at Vancouver Film School, specializing in Programming for Games, Web & Mobile. I am passionate about creating engaging and innovative video game experiences, with a particular focus on gameplay and UI programming. I love bringing ideas to life through code and collaborating with others to build interactive worlds that players love to explore.
-                                   <br /><br /> If you'd like to connect or chat about game development, feel free to reach out at: simoneblcormier@gmail.com
-
+                                    I am a Technical Artist with a passion for bridging the gap between design and technology, specializing in user interface (UI) development for games and interactive experiences. My expertise lies in creating visually engaging, intuitive, and performant UI systems that enhance player experience and support gameplay goals. I thrive at the intersection of art and code—prototyping, implementing, and optimizing UI features using modern tools, shaders, and animation techniques. I enjoy collaborating with designers, artists, and engineers to bring creative visions to life, and I am always eager to explore new technologies and workflows that push the boundaries of interactive UI.
                                 </p>
+                                <div style="display: flex; justify-content: center; margin: 32px 0 0 0;">
+                                    <a href="contact.html" class="resume-readmore-btn">
+                                        Contact Me <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
 
