--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html"> PORTFOLIO</a></li>
+                        <li><a href="resume.html"> RESUME</a></li>
                         <li><a href="about.html"> ABOUT ME</a></li>
                         <li><a href="contact.html"> CONTACT</a></li>
                     </ul>
@@ -496,6 +497,10 @@
                          <a href="https://simonecormier.itch.io/" target="_blank">
                              <i class="fa-brands fa-itch-io"></i>
                              <span>Itch.io</span>
+                         </a>
+                         <a href="https://github.com/simonebcormier" target="_blank">
+                             <i class="fa-brands fa-square-github"></i>
+                             <span>GitHub</span>
                          </a>
                      </div>
                  </div>
