high concept updated, resume updated

--- a/Shroombound.html
+++ b/Shroombound.html
@@ -50,7 +50,10 @@
 
                                 <h2>High Concept</h2>
                                 <p>
-                                    Shroom Bound is a 3rd Person, 3D environmental obstacle platformer where you play as an explorer [codename: Nova] as they search for a mysterious powersource on an alien planet. Nova must learn to bend the new environment to their will by platforming on the giant mushrooms that make up the majority of the landscape and by using their trusty Device of Teleportation (D.O.T.). Not only does D.O.T. allow the player to teleport to its location, but it can be used to slash through weaker flora, of course, D.O.T. is only as useful as the player is skilled, in order to use any of D.O.Ts capabilities the player needs to know exactly where to throw it. Player's will need to master both D.O.T. and  their environment in order to find their way to the enormous mushroom powering the whole planet and complete their contract.
+                                    Shroom Bound is a 3rd Person, 3D environmental obstacle platformer where you play as an explorer 
+                                    [codename: Nova] as they search for a mysterious powersource on an alien planet. Nova must learn 
+                                    to bend the new environment to their will by platforming on the giant mushrooms that make up the 
+                                    majority of the landscape and by using their trusty Device of Teleportation (D.O.T.).                                     
                                 </p>
 
                                 <div class="video-container">
@@ -100,7 +103,6 @@
                                     <li id="link"><a href="#tutimp">Game tutorialization</a></li>
                                     <li>Implemented floating mushroom system for river level</li>
                                     <li>Build master, made sure team followed correct workflow on Git and organized folder structures</li>
-                                    <li>Worked closely with designers to create blueprint functions through C++</li>
                                 </ul>
                             </div>
                         </div>
