--- a/Slipstream.html
+++ b/Slipstream.html
@@ -50,8 +50,9 @@
 
                                 <h2>High Concept</h2>
                                 <p>
-                                    Slipstream is a 3D, third person, movement-based platformer where you play as a desert dweller with mechanical enhancements who protects what still remains of their ancient civilization from the attack of sandworms. The sandworm queen is heading straight to the last standing bastion of your people and the barrier that once surrounded the obelisk is down.
-                                    Now it is up to you to race against the worm, surfing through the dunes and collecting enough energy particles to power up the barrier and keep the memory of your people alive.
+                                    Slipstream is a 3D, third person, movement-based platformer where you play as a desert dweller who protects what still remains of their ancient civilization from the 
+                                    attack of sandworms. You must race against the queen sandworm, surfing through the dunes and collecting 
+                                    enough energy particles to power up the barrier and keep the memory of your people alive.
                                 </p>
 
                                 <div class="video-container">
