--- a/VR Canoe Journey.html
+++ b/VR Canoe Journey.html
@@ -71,7 +71,7 @@
 
                                 <ul>
                                     <li><b>Project: </b>Carleton University Team Project</li>
-                                    <li><b>Role: </b>Gameplay Programmer, UI Programmer</li>
+                                    <li><b>Role: </b>UI Programmer, Gameplay Programmer</li>
                                     <li><b>Web Framework: </b>A-Frame</li>
                                     <li><b>Programming Languages: </b>HTML, CSS, Javascript</li>
                                 </ul>
