--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <a href="VR%20Canoe%20Journey.html">
                                     <img src="images/canoe/mohawk-cover.png" alt="Mohawk Game Cover">
                                     <div class="overlay">
-                                        <figcaption>VR: Mohawk Canoe Journey<br><figunder>Programmer</figunder></figcaption>
+                                        <figcaption>VR: Mohawk Canoe Journey<br><figunder>UI Programmer - Gameplay Programmer</figunder></figcaption>
                                     </div>
                                 </a>
                             </figure>
