--- a/resume.html
+++ b/resume.html
@@ -182,9 +182,9 @@
                 <span class="resume-entry-date">Feb 2025 - Current</span>
             </div>
             <ul class="resume-entry-bullets">
-                <li>Developed UI poison vignette effect and bounce mushroom material visual effect using Unreal Engine's material system to support immersive UI and gameplay feedback</li>
+                <li>Developed UI poison vignette effect and bounce mushroom visual effect using Unreal Engine’s material system and textures to support immersive UI and gameplay feedback</li>
                 <li>Implemented all front end, main menu, end menu, pause menu, and HUD using UMG and shaders for enhanced visual fidelity and responsiveness</li>
-                <li>Integrated VFX and animations into the game</li>
+                <li>Integrated VFX particles and animations into the game</li>
                 <li>Designed and implemented UI animations for crosshair and text popups using Unreal's animation tools to improve usability and guide player attention</li>
             </ul>
             <div class="resume-entry-actions">
@@ -228,7 +228,7 @@
                 <span class="resume-entry-date">Oct 2024 – Feb 2025</span>
             </div>
             <ul class="resume-entry-bullets">
-                <li>Designed and implemented character and gameplay VFX to create speed lines using Unity's Shader Graph to enhance visual feedback and player immersion</li>
+                <li>Designed and implemented character and gameplay VFX particles to create speed lines using Unity’s Shader Graph to enhance visual feedback and player immersion</li>
                 <li>Created character trick animations using Unity's animation system and scripting to support responsive gameplay</li>
                 <li>Implemented functional HUD systems such as health and special ability bars and integrated win/lose screen UI elements to support gameplay feedback and state transitions</li>
             </ul>
@@ -249,7 +249,7 @@
                 <li>Developed particle systems, including god ray effects, to support environmental storytelling</li>
                 <li>Built a minimap system with player tracking and full-screen map toggle across four levels</li>
                 <li>Designed and implemented a dialogue UI system for interactive character conversations</li>
-                <li>Created UI animations and visual effects to enhance user feedback and interface transitions</li>
+                <li>Created UI animations and visual effects for dialogue system and in world icons to enhance user feedback and interface transitions</li>
             </ul>
             <div class="resume-entry-actions">
                 <a href="LUMI.html" class="resume-readmore-btn" target="_blank">
