resume section update

--- a/resume.html
+++ b/resume.html
@@ -203,7 +203,7 @@
             <ul class="resume-entry-bullets">
                 <li>Prototyped interactive learning platforms using Adobe XD, HTML, CSS and CSS to support internal employee training</li>
                 <li>Conducted user testing and translated findings into actionable UI/UX improvements</li>
-                <li>Collaborated with cross-functional teams to iterate on layouts, interaction flows, and accessibility in an agile workflow using Jira</li>
+                <li>Iterated designs based on user feedback and testing insights</li>
             </ul>
         </div>
 
@@ -215,7 +215,7 @@
             </div>
             <ul class="resume-entry-bullets">
                 <li>Developed wireframes and rapid UX/UI prototypes in Adobe XD for responsive software interfaces</li>
-                <li>Iterated designs based on user feedback and testing insights</li>
+                <li>Collaborated with cross-functional teams to iterate on layouts and transition flows in an agile workflow using Jira</li>
                 <li>Worked closely with developers and production teams to implement polished, user-focused UI solutions</li>
             </ul>
         </div>
