--- a/DeckBuilder.html
+++ b/DeckBuilder.html
@@ -43,7 +43,7 @@
                         <div class="project-info">
 
                             <div class="content-header">
-                                <h1>Space Shooter Prototype</h1>
+                                <h1>Deck Builder Prototype</h1>
                             </div>
 
                             <div class="overview-sections">
