--- a/Lego.html
+++ b/Lego.html
@@ -100,6 +100,14 @@
         
         
 
+<script>
+function showMenu() {
+    document.getElementById('navLinks').style.right = '0';
+}
+function hideMenu() {
+    document.getElementById('navLinks').style.right = '-200px';
+}
+</script>
     </body>
 </html>
 
