--- a/Calculator.html
+++ b/Calculator.html
@@ -140,7 +140,14 @@
 
         </section>
 
-
+        <script>
+        function showMenu() {
+            document.getElementById('navLinks').style.right = '0';
+        }
+        function hideMenu() {
+            document.getElementById('navLinks').style.right = '-200px';
+        }
+        </script>
     </body>
 </html>
 
