--- a/Character.html
+++ b/Character.html
@@ -126,6 +126,15 @@
     </body>
 </html>
 
+<script>
+function showMenu() {
+    document.getElementById('navLinks').style.right = '0';
+}
+function hideMenu() {
+    document.getElementById('navLinks').style.right = '-200px';
+}
+</script>
+
 
 
 
