--- a/Ecopact.html
+++ b/Ecopact.html
@@ -126,6 +126,14 @@
         
         
 
+    <script>
+    function showMenu() {
+        document.getElementById('navLinks').style.right = '0';
+    }
+    function hideMenu() {
+        document.getElementById('navLinks').style.right = '-200px';
+    }
+    </script>
     </body>
 </html>
 
