--- a/EngineX.html
+++ b/EngineX.html
@@ -130,7 +130,14 @@
 
         </section>
 
-
+        <script>
+        function showMenu() {
+            document.getElementById('navLinks').style.right = '0';
+        }
+        function hideMenu() {
+            document.getElementById('navLinks').style.right = '-200px';
+        }
+        </script>
     </body>
 </html>
 
