--- a/Ethereal Light.html
+++ b/Ethereal Light.html
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
 
-                <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+                <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
             </nav>
             
         </section>
@@ -159,6 +159,20 @@
 
     </body>
 </html>
+
+<script>
+function toggleMenu() {
+  const navLinks = document.getElementById('navLinks');
+  if (navLinks.style.right === '0px') {
+    navLinks.style.right = '-200px';
+  } else {
+    navLinks.style.right = '0';
+  }
+}
+function hideMenu() {
+  document.getElementById('navLinks').style.right = '-200px';
+}
+</script>
 
 
 
