--- a/LUMI.html
+++ b/LUMI.html
@@ -29,7 +29,7 @@
                     </ul>
                 </div>
 
-                <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+                <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
             </nav>
 
         </section>
@@ -306,7 +306,20 @@
 
         </section>
 
-     </body>
+        <script>
+        function toggleMenu() {
+            const navLinks = document.getElementById('navLinks');
+            if (navLinks.style.right === '0px') {
+                navLinks.style.right = '-200px';
+            } else {
+                navLinks.style.right = '0';
+            }
+        }
+        function hideMenu() {
+            document.getElementById('navLinks').style.right = '-200px';
+        }
+        </script>
+    </body>
 
 </html>
 
