--- a/Raycast.html
+++ b/Raycast.html
@@ -119,6 +119,15 @@
     </body>
 </html>
 
+<script>
+function showMenu() {
+    document.getElementById('navLinks').style.right = '0';
+}
+function hideMenu() {
+    document.getElementById('navLinks').style.right = '-200px';
+}
+</script>
+
 
 
 
