--- a/Resumator.html
+++ b/Resumator.html
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
 
-                <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+                <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
             </nav>
 
         </section>
@@ -142,8 +142,19 @@
 
         </section>
 
-
-
+        <script>
+        function toggleMenu() {
+            const navLinks = document.getElementById('navLinks');
+            if (navLinks.style.right === '0px') {
+                navLinks.style.right = '-200px';
+            } else {
+                navLinks.style.right = '0';
+            }
+        }
+        function hideMenu() {
+            document.getElementById('navLinks').style.right = '-200px';
+        }
+        </script>
     </body>
 </html>
 
