--- a/Spaceship.html
+++ b/Spaceship.html
@@ -154,6 +154,14 @@
 
         </section>
 
+        <script>
+        function showMenu() {
+            document.getElementById('navLinks').style.right = '0';
+        }
+        function hideMenu() {
+            document.getElementById('navLinks').style.right = '-200px';
+        }
+        </script>
     </body>
 </html>
 
