--- a/Zorion.html
+++ b/Zorion.html
@@ -129,6 +129,15 @@
     </body>
 </html>
 
+<script>
+function showMenu() {
+    document.getElementById('navLinks').style.right = '0';
+}
+function hideMenu() {
+    document.getElementById('navLinks').style.right = '-200px';
+}
+</script>
+
 
 
 
