cover background change, footer edits

--- a/Ethereal Light.html
+++ b/Ethereal Light.html
@@ -144,7 +144,7 @@
         
 <section class="footer">
     
-    <p>Simone Cormier - Programmer and Designer</p>
+    <p>Simone Cormier - Technical Artist | UI Programmer</p>
     <div class="icons">
         <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
             <i class="fa fa-linkedin"></i>
