--- a/Spaceship.html
+++ b/Spaceship.html
@@ -134,7 +134,7 @@
         <section class="footer">
 
             <div class="footer-color">
-                <h3>Simone Cormier - Programmer and Designer</h3>
+                <h3>Simone Cormier - Technical Artist | UI Programmer</h3>
                 <p>simoneblcormier@gmail.com</p>
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
