--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                         <form action="https://api.web3forms.com/submit" method="POST">
 
                             <h1>Let's Chat!</h1>
-                            <h4>simoneblcormier@gmail.com | 613-302-1441</h4>
+                            <h4>simoneblcormier@gmail.com</h4>
                             <input type="hidden" name="access_key" value="214c8c6f-3f22-44ab-b36c-21f86b196625">
                             <input type="text" name="name" placeholder="Name" required>
                             <input type="email" name="email" placeholder="Email" required>
@@ -78,7 +78,7 @@
         <section class="footer">
 
             <div class="footer-color">
-                <h3>Simone Cormier - Programmer and Designer</h3>
+                <h3>Simone Cormier - Technical Artist | UI Programmer</h3>
                 <p>simoneblcormier@gmail.com</p>
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
