--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             </nav>
             
             <div class="head-image">
+                <video autoplay loop muted playsinline id="shroombound-bg-video" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:0;pointer-events:none;"><source src="images/shroombound/shroombound-covervideo.mp4" type="video/mp4"></video>
+                <div style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(15,31,46,0.80);z-index:1;"></div>
+                <div style="position:relative;z-index:2;">
                 <h1>Simone Cormier</h1>
                 <h2>Technical Artist - UI Programmer</h2>
                 <div class="icons" style="margin-top: 32px;">
@@ -67,6 +70,7 @@
                         <i class="fa-brands fa-square-github"></i>
                         <span>GitHub</span>
                     </a>
+                </div>
                 </div>
             </div>
 
@@ -549,7 +553,7 @@
              <section class="footer">
 
                  <div class="footer-color">
-                     <h3>Simone Cormier - Programmer and Designer</h3>
+                     <h3>Simone Cormier - Technical Artist | UI Programmer</h3>
                      <p>simoneblcormier@gmail.com</p>
                      <div class="icons">
                          <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
