--- a/Ecopact.html
+++ b/Ecopact.html
@@ -104,7 +104,7 @@
         
 <section class="footer">
     
-    <p>Simone Cormier - Programmer and Designer</p>
+    <p>Simone Cormier - Technical Artist | UI Programmer</p>
     <div class="icons">
         <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
@@ -136,21 +136,4 @@
     </script>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
