--- a/Zorion.html
+++ b/Zorion.html
@@ -104,7 +104,7 @@
         
 <section class="footer">
     
-    <p>Simone Cormier - Programmer and Designer</p>
+    <p>Simone Cormier - Technical Artist | UI Programmer</p>
     <div class="icons">
         <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
@@ -137,21 +137,3 @@ function hideMenu() {
     document.getElementById('navLinks').style.right = '-200px';
 }
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
