--- a/hlslshaders.html
+++ b/hlslshaders.html
@@ -140,7 +140,7 @@
         <section class="footer">
 
             <div class="footer-color">
-                <h3>Simone Cormier - Programmer and Designer</h3>
+                <h3>Simone Cormier - Technical Artist | UI Programmer</h3>
                 <p>simoneblcormier@gmail.com</p>
                 <div class="icons">                    <a href="https://www.linkedin.com/in/simone-cormier/" target="_blank">                        <i class="fa-brands fa-linkedin"></i>                        <span>LinkedIn</span>                    </a>                    <a href="https://simonecormier.itch.io/" target="_blank">                        <i class="fa-brands fa-itch-io"></i>                        <span>Itch.io</span>                    </a>                </div>
             </div>
