--- a/Shroombound.html
+++ b/Shroombound.html
@@ -43,17 +43,17 @@
                         <div class="project-info">
 
                             <div class="content-header">
-                                <h1>Shroom Bound(WIP)</h1>
+                                <h1>Shroom Bound (WIP)</h1>
                             </div>
 
                             <div class="overview-sections">
 
                                 <h2>High Concept</h2>
                                 <p>
-                                    Shroom Bound is a 3rd Person, 3D environmental obstacle platformer where you play as an explorer 
-                                    [codename: Nova] as they search for a mysterious powersource on an alien planet. Nova must learn 
-                                    to bend the new environment to their will by platforming on the giant mushrooms that make up the 
-                                    majority of the landscape and by using their trusty Device of Teleportation (D.O.T.).                                     
+                                    Shroom Bound is a 3rd Person, 3D environmental obstacle platformer where you play as an explorer
+                                    [codename: Nova] as they search for a mysterious powersource on an alien planet. Nova must learn
+                                    to bend the new environment to their will by platforming on the giant mushrooms that make up the
+                                    majority of the landscape and by using their trusty Device of Teleportation (D.O.T.).
                                 </p>
 
                                 <div class="video-container">
@@ -88,6 +88,7 @@
                                 <h2>Responsibilities</h2>
 
                                 <ul>
+                                    <li id="link"><a href="#shaders0">Interactive Foliage Effect</a></li>
                                     <li id="link"><a href="#shaders1">Poison Screen Post-Process Effect</a></li>
                                     <li id="link"><a href="#shaders2">Poison Helmet Effect</a></li>
                                     <li id="link"><a href="#shaders3">Mushroom Material Effect</a></li>
@@ -113,6 +114,27 @@
 
             <!--SECTIONS-->
 
+            <div class="background-col-section" id="shaders0">
+                <div class="respo-section2">
+                    <div class="respo-section2-image">
+                        <video width="640" height="360" autoplay muted loop>
+                            <source src="images/shroombound/shroombound-foliage.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="respo-section-text">
+                        <h1>Interactive Foliage Effect</h1>
+                        <ul>
+                            <li>Implemented a system where grass visually "squishes" down in real-time as the player walks over it, enhancing immersion and interactivity.</li>
+                            <li>Used a scene capture component and render target to detect and store areas where the player or objects interact with the grass</li>
+                            <li>Leveraged custom depth rendering and a post-process material to accurately mask only the objects affecting the grass, ensuring precise deformation.</li>
+                            <li>Added a visual effect where mushrooms light up when the player steps on or near them, using the same render target data for seamless interaction.</li>
+                            <li>Calculated the distance between the player and the grass surface to control the intensity of the squish and the light-up effect, making the response more natural and localized.</li>
+                            <li>Limited the effect area and render target resolution to maintain high performance, only updating grass and mushrooms near the player.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
             <div class="background-col-section" id="shaders1">
                 <div class="respo-section1">
                     <div class="respo-section-text">
@@ -121,10 +143,10 @@
                             <li>Created a unified post-process material in Unreal Engine to visually represent the player's poisoned state.</li>
                             <li>Combined a dynamic colored vignette, animated toxic smoke, and chromatic aberration into a single layered effect.</li>
                             <li>The vignette darkens and closes in as poison severity increases, simulating tunnel vision.</li>
-                            <li> Animated noise textures create swirling, creeping smoke at the screen edges, with density and speed scaling to poison level.</li>
+                            <li>Animated noise textures create swirling, creeping smoke at the screen edges, with density and speed scaling to poison level.</li>
                             <li>Separated and offset color channels over time to produce a hallucinogenic, color-fringing distortion.</li>
                             <li>All effect parameters are exposed for real-time tuning and escalation during gameplay.</li>
-                            <li> Optimized for performance to ensure smooth real-time rendering.</li>
+                            <li>Optimized for performance to ensure smooth real-time rendering.</li>
                         </ul>
                     </div>
                     <div class="respo-section2-image">
